--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -28,15 +28,42 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="https://dainedvorak.com/z_dev/public/assets/css/style.css" rel="stylesheet">
+  <style>
+    #skillITEM {
+    border: 1.5px solid green;
+    margin-bottom: 1%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+    #checkmark {
+      fill: #17aa1c;
+      width: 2%;
+      height: auto;
+      padding-bottom: 2px;
+      margin-right: 10px;
+                        }
+    .hoverable {
+      transition: background-color 0.2s ease;
+      align-items: center;
+      padding: 1%;
+      margin: 5px;
+  }
+  .hoverable:hover {
+      background-color: lightgrey;
+      padding: 2%;
+      border: #17aa1c solid 2px;
+      border-radius: 5%;
+  }
+    </style>
 </head>
 
 <body>
@@ -65,14 +92,14 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public/" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
           
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-server"></i> <span>My Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumes</span></a></li>
-          <li><a href="#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span><h3></h3>Work History <span class="badge bg-success p-1"> New </span></h3>
+          <li><a href="#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span><h3></h3>Work History<span class="badge bg-success p-1"> New </span></h3>
           </span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="https://dainedvorak.com/portfolio/index.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio Index</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -95,16 +122,15 @@
         <div class="section-title">
           <h2>About Me</h2>
           <p>
-            Leveraging over 10 years of expertise in SEO and 5 years in technology, including cloud engineering, web development, and process automation, I specialize in leading projects that enhance efficiency through automation and strengthen web presence with tailored SEO strategies. My track record of driving significant business growth is underpinned by a solid foundation in SEO (On-Page, Off-Page, and Technical), continuous professional development, and a suite of relevant certifications. I thrive in environments that prioritize process efficiency and innovation, advocating for the transformative impact of automation to uncover strategic opportunities for data-driven competitive advantage.
-          </p>
+            Leveraging over 10 years of expertise in SEO and business process automation and 5 years of experience in technology, including cloud engineering, web development, and more, I specialize in leading projects that enhance efficiency through automation and strengthen web presence with tailored SEO strategies. My track record of driving significant business growth is underpinned by a solid foundation in SEO (On-Page, Off-Page, and Technical), continuous professional development, and a suite of relevant certifications. I thrive in environments that prioritize process efficiency and innovation, advocating for the transformative impact of using data-backed logic to discover strategic opportunities for data-driven competitive advantage.          </p>
         </div>
   
   <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="https://dainedvorak.com/images/layer-2.png" class="img-fluid" alt="">
+            <img src="https://dainedvorak.com/z_dev/public/assets/img/about-me/daine-dvorak-resume-website-about_me-section.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>SEO Expert & Process Automation Innovator + Developer</h3>
+            <h3>SEO Expert Innovator & Process Automation Developer</h3>
             <p class="fst-italic">
               Explore my portfolio to witness the impact of automation in real-world projects and SEO strategies that have catapulted businesses to the top of search results. Each project underscores my commitment to excellence and innovation in the tech industry.
             </p>
@@ -817,7 +843,7 @@
 
 
     <!-- ======= Portfolio Section ======= -->
-    <!-- <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -945,7 +971,8 @@
         </div>
 
       </div>
-    </section> --><!-- End Portfolio Section -->
+    </section> 
+<!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
   <!--   <section id="services" class="services">
@@ -1158,29 +1185,29 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container bg-dark text-white text-center p-3">
-      <div class="copyright">
-        &copy; Copyright 2024<strong><span> JETTLIFE Tech</span></strong>
-      </div>
+    <div class="container">
       <div class="credits">
-        Designed by Daine Dvorak dba <a href="https://client.jettlifetech.com/">JETTLIFE Tech</a>
+        Designed by Daine Dvorak
+      </div>
+      <div class="copyright">
+        &copy; Copyright 2024 <strong><span>JETTLIFE Tech</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/aos/aos.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="https://dainedvorak.com/z_dev/public/assets/js/main.js"></script>
 
 </body>
 
