--- a/z_dev/public/portfolio-details.html
+++ b/z_dev/public/portfolio-details.html
@@ -65,7 +65,7 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
+    <section id="breadcrumbs" class="breadcrumbs  border-bottom shadow bg-dark text-white">
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
