--- a/daine-dvoraks-portoflio/custom-chatgpt-schema-generator/showcase-details-template.html
+++ b/daine-dvoraks-portoflio/custom-chatgpt-schema-generator/showcase-details-template.html
@@ -147,9 +147,9 @@
           <li><a href="https://dainedvorak.com/z_dev/public/index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="https://dainedvorak.com/z_dev/public/index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
           <li><a href="https://dainedvorak.com/z_dev/public/index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="https://dainedvorak.com/z_dev/public/index.html#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span><h3></h3>Work History <span class="badge bg-success p-1"> New </span></h3>
+          <li><a href="#workHistorydd" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span><h3></h3>Work History <span class="badge bg-success p-1"> New </span></h3>
           </span></a></li>
-          <li><a href="https://dainedvorak.com/portfolio/index.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio Index</span></a></li>
+          <li><a href="https://dainedvorak.com/z_dev/public/showcase-details-template.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Daine Dvorak's Portfolio</span></a></li>
           <li><a href="https://dainedvorak.com/z_dev/public/index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="https://dainedvorak.com/z_dev/public/index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
