--- a/z_dev/public/showcase-details-template.html
+++ b/z_dev/public/showcase-details-template.html
@@ -133,10 +133,10 @@
           <a href="https://bit.ly/DainesLinkedIn" class="facebook"><i class="bx bxl-facebook"></i>
           </a>
           <a href="https://bit.ly/DaineDLinkedIn2" class="linkedin"><i class="bx bxl-linkedin"></i>
-          
           </a>
           <a href="https://bit.ly/DDGitHub" class="github"><i class="bx bxl-github"></i>
-          
+          </a>
+          <a href="https://www.youtube.com/channel/UCFyLSK8FIbfsw4VSPicd3qw" class="youtube"><i class="bx bxl-youtube"></i>
           </a>
         </div>
       </div>
