--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -192,7 +192,7 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-seo">SEO</li>
-            <li data-filter=".filter-card">Process Automation</li>
+            <li data-filter=".filter-automation">Process Automation</li>
             <li data-filter=".filter-web">Web App Tools</li>
             <li data-filter=".filter-prompts">Prompts Central</li>
           </ul>
@@ -203,7 +203,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-seo">
           <div class="portfolio-wrap">
-            <img src="https://dainedvorak.com/portfolio/images/project-1/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="https://dainedvorak.com/portfolio/images/project-1/portfolio-1.jpg " class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href="https://dainedvorak.com/portfolio/images/project-1/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Google Lighthouse Bulk Analysis - Lighthouse Web App"><i class="bx bx-plus"></i></a>
               <a href="https://dainedvorak.com/z_dev/public/showcase-details-template.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -241,11 +241,11 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="https://dainedvorak.com/portfolio/4-bookmarklets/SERP-extraction_Preview.gif" class="img-fluid" alt="Daine Dvorak Custom Developed Bookmarklets Automating tedious task.">
             <div class="portfolio-links">
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+              <a href="https://dainedvorak.com/portfolio/4-bookmarklets/SERP-extraction_Preview.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
