--- a/portfolio/seo-automation/index.html
+++ b/portfolio/seo-automation/index.html
@@ -81,6 +81,12 @@
          
       </script>
       <style>
+         #main2 {
+            background-color: #eeeeee;
+
+           /*  background-image: url("https://dainedvorak.com/z_dev/public/assets/img/background-patterns/white-css-pattern-zig-zag-2.png"); */
+            background-repeat: repeat;
+         }
          #skillITEM {
          border: 1.5px solid green;
          margin-bottom: 1%;
@@ -125,7 +131,6 @@
                   </a>
                   <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
                   </a>
-
                </div>
             </div>
             <nav id="navbar" class="nav-menu navbar">
@@ -151,7 +156,7 @@
          </div>
       </header>
       <!-- End Header -->
-      <main id="main">
+      <main id="main2">
          <!-- ======= Breadcrumbs ======= -->
          <section id="breadcrumbs" class="breadcrumbs border-bottom shadow bg-dark text-white">
             <div class="container-fluid">
