update repo before local download and development work for real-time updates in browser - faster dev

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -193,9 +193,9 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-seo">SEO</li>
-            <li data-filter=".filter-automation">Process Automation</li>
-            <li data-filter=".filter-web">Web App Tools</li>
-            <li data-filter=".filter-prompts">Prompts Central</li>
+            <li data-filter=".filter-automation">Automation</li>
+            <li data-filter=".filter-leadership">Leadership</li>
+            <li data-filter=".filter-innovate">Innovation</li>
           </ul>
         </div>
       </div>
@@ -213,11 +213,11 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+          <div class="portfolio-wrap shadow" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+            <img src="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/tech-audit-scalable-cover.png" class="img-fluid border-radius-10" alt="">
             <div class="portfolio-links">
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/tech-audit-scalable-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox border-radius-10" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/index.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
