--- a/portfolio/1-custom-gpt-model_schema-generator-showcase/index.html
+++ b/portfolio/1-custom-gpt-model_schema-generator-showcase/index.html
@@ -81,13 +81,7 @@
          
       </script>
       <style>
-         #main2 {
-            background-color: #eeeeee;
 
-           /*  background-image: url("https://dainedvorak.com/z_dev/public/assets/img/background-patterns/white-css-pattern-zig-zag-2.png"); */
-            background-repeat: repeat;
-         }
-         
     #skillITEM {
     border: 1.5px solid green;
     margin-bottom: 1%;
@@ -163,12 +157,12 @@
          </div>
       </header>
       <!-- End Header -->
-      <main id="main" class="main2">
+      <main id="main">
          <!-- ======= Breadcrumbs ======= -->
          <section id="breadcrumbs" class="breadcrumbs border-bottom shadow bg-dark text-white">
-            <div class="container-fluid">
+            <div class="container">
                <div class="d-flex justify-content-between align-items-center">
-                  <h1>{{showcase_page_title}}</h1>
+                  <h1>Automated Advanced Schema.org Markup Generator - Proprietary Tool</h1>
                </div>
             </div>
          </section>
@@ -184,15 +178,16 @@
                         <li class="mb-2 mt-0">
                            <strong>Category</strong>:
                            <ul>
-                              <li id="portfolio_category">{{portfolio_category}}</li>
+                              <li id="portfolio_category">Technical SEO</li>
                            </ul>
                         </li>
                         <li>
                            <strong>Key Skills Highlighted</strong>:
                            <ul>
-                              <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
-                              <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                              <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
+                              <li id="skill_1_portfolio">Prompt Engineering
+                              </li>
+                              <li id="skill_2_portfolio">Technical SEO Skill Sets</li>
+                              <li id="skill_3_portfolio">Development and LARGE Data Transformation</li>
                            </ul>
                         </li>
                      </ul>
@@ -208,38 +203,35 @@
                      <div class="portfolio-details-slider swiper">
                         <div class="swiper-wrapper align-items-center">
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_1}}" alt="{{showcase_image_1_altText}}" id="showcase_image_1">
+                              <img src="https://dainedvorak.com/portfolio/1-custom-gpt-model_schema-generator-showcase/daine-dvorak-custom-chatgpt-model__v0-3-1__schema-generation-1.png" alt="User interface with annotation numbers outlining different user interactions avaiable when first opening the chatGPT model and highlighting the developer: Daine Dvorak." id="showcase_image_1">
                            </div>
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_2}}" alt="{{showcase_image_2_altText}}" id="showcase_image_2">
+                              <img src="https://dainedvorak.com/portfolio/1-custom-gpt-model_schema-generator-showcase/daine-dvorak-custom-chatgpt-model__v0-3-1__schema-generation-custom-build-view-2.png" alt="Overlay of the custom ChatGPT Model setup with annotations pointing to the developer, the 'Knowledge' data file, and pre-created prompts by Daine Dvorak." id="showcase_image_2">
                            </div>
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_3}}" alt="{{showcase_image_3_altText}}" id="showcase_image_3">
+                              <img src="https://dainedvorak.com/portfolio/1-custom-gpt-model_schema-generator-showcase/daine-dvorak-custom-chatgpt-model__v0-3-1__schema-generation-output-example-3.png" alt="highlights over 2 images showing the results of this custom ChatGPT model to auto generate advanced schema markup for any content for a webpage in action developed by Daine Dvorak." id="showcase_image_3">
                            </div>
                         </div>
                         <div class="swiper-pagination"></div>
                      </div>
                      <div class="portfolio-description">
-                        <h2 class="display-2" id="h2_showcase_header">{{h2_showcase_header}}</h2>
+                        <h2 class="display-2" id="h2_showcase_header">Scalable, Automated, Custom Template for SEO Technical Audit</h2>
                         <h3 style="font-weight: 900;">Introduction:</h3>
-                        <p>{{showcase_intoduction}}</p>
+                        <p>The SEO Technical Audit Template Workbook -  distills complex SEO tasks into actionable steps, focusing on key areas like crawl errors, site speed, and security. Tailored for both seasoned professionals and beginners, it provides checklists and best practices to enhance website performance and search rankings. This concise guide emphasizes a strategic approach to organic growth and digital competitiveness, making it an invaluable tool for anyone looking to complete comphrensive technical audits or a simple discovery audit on technical landscape of perspective clients and competitors. </p>
                         <h3 style="font-weight: 900;">Challenge:</h3>
-                        <p>{{Challenge_Content}} </p>
+                        <p>In the ever-evolving landscape of SEO, staying ahead means adopting innovative techniques. The challenge was enhancing SERP visibility in a saturated market.</p>
                         <h3 style="font-weight: 900;">Strategy:</h3>
-                        <p>{{Strategy_Content}}</p>
+                        <p>I developed a custom AI model for schema markup. This revolutionary approach allowed for dynamic, AI-assisted optimization of web content, ensuring richer, more relevant search results.</p>
                         <h3 style="font-weight: 900;">Results:</h3>
                         <ul>
-                           <li id="results_1">{{Results_Content_1}}</li>
-                           <li id="results_2">{{Results_Content_2}}</li>
-                           <li id="results_3">{{Results_Content_3}}</li>
-                           <li id="results_4">{{Results_Content_4}}</li>
-                           <li id="results_5">{{Results_Content_5}}</li>
-                           <li id="results_6">{{Results_Content_6}}</li>
-                        </ul>
+                           <li id="results_1">📈 39% increase in SERP rich results.</li>
+                           <li id="results_2">Substantial rise in unbranded keyword rankings.</li>
+                           <li id="results_3">Marked improvement in overall organic traffic and user engagement.</li>
+                                                   </ul>
                         <h3 style="font-weight: 900;">Impact:</h3>
-                        <p>{{Impact_Content}}</p>
-                        <h4 style="font-weight: 900;">Summary:</h4>
-                        <p id="port_summary"> {{Summary_Content}} </p>
+                        <p>This case study exemplifies the power of AI in redefining SEO strategies. It's not just about adapting to changes; it's about being the change.</p>
+<!--                         <h4 style="font-weight: 900;">Summary:</h4>
+                        <p id="port_summary"> Did this case study spark ideas for your SEO strategy? Hit 'Like' if you find AI integration in SEO as fascinating as I do and share your thoughts in the comments! 🤖💡</p> -->
                      </div>
                   </div>
                </div>
