--- a/portfolio/driving-seo-success-and-team-growth/index.html
+++ b/portfolio/driving-seo-success-and-team-growth/index.html
@@ -81,19 +81,25 @@
          
       </script>
       <style>
-         #skillITEM {
-         border: 1.5px solid green;
-         margin-bottom: 1%;
-         padding-top: 5px;
-         padding-bottom: 5px;
-         }
-         #checkmark {
-         fill: #17aa1c;
-         width: 2%;
-         height: auto;
-         padding-bottom: 2px;
-         margin-right: 10px;
-         }
+    #skillITEM {
+    border: 1.5px solid green;
+    margin-bottom: 1%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .skillITEM {
+    border: 1.5px solid green;
+    margin-bottom: 1%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+    #checkmark {
+      fill: #17aa1c;
+      width: 2%;
+      height: auto;
+      padding-bottom: 2px;
+      margin-right: 10px;
+                        }
          .hoverable {
          transition: background-color 0.2s ease;
          align-items: center;
