--- a/portfolio/showcase-details-template.html
+++ b/portfolio/showcase-details-template.html
@@ -136,8 +136,10 @@
           
           </a>
           <a href="https://bit.ly/DDGitHub" class="github"><i class="bx bxl-github"></i>
-          
           </a>
+          <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
+          </a>
+
         </div>
       </div>
 
