--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -203,18 +203,18 @@
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-seo">
-          <div class="portfolio-wrap">
-            <img src="https://dainedvorak.com/portfolio/images/project-1/portfolio-1.jpg " class="img-fluid" alt="">
+          <div class="portfolio-wrap"  style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
+            <img src="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover_url-extraction-bookmarklet-one-of-two.png" class="img-fluid" alt="gif showing how the bookmarklet works by clicking and extracting all URLs on the page you were on.">
             <div class="portfolio-links">
-              <a href="https://dainedvorak.com/portfolio/images/project-1/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Google Lighthouse Bulk Analysis - Lighthouse Web App"><i class="bx bx-plus"></i></a>
+              <a href="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover-link-bookmarklet-url-extractor-from-search-results-webpage-developed-by-daine-dvorak-v2.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="SERP Extractor using Bookmarklet custom made by Daine Dvorak"><i class="bx bx-plus"></i></a>
               <a href="https://dainedvorak.com/z_dev/public/showcase-details-template.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-automation filter-innovate filter-seo">
           <div class="portfolio-wrap shadow" style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
-            <img src="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/tech-audit-scalable-cover.png" class="img-fluid border-radius-10" alt="">
+            <img src="https://dainedvorak.com/portfolio/1-custom-gpt-model_schema-generator-showcase/cover_advanced-schema-generator-using-customgpt-by-daine-dvorak-v2.png" class="img-fluid border-radius-10" alt="">
             <div class="portfolio-links">
               <a href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/tech-audit-scalable-cover.png" data-gallery="portfolioGallery" class="portfolio-lightbox border-radius-10" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/index.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -223,34 +223,16 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-prompts">
-          <div class="portfolio-wrap">
+          <div class="portfolio-wrap"  style="border-radius: 25px; border: 2px solid rgb(0, 0, 0);">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Prompts Central"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="https://dainedvorak.com/portfolio/1-custom-gpt-model_schema-generator-showcase/index.html
+              " title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
-          <div class="portfolio-wrap">
-            <img src="https://dainedvorak.com/portfolio/4-bookmarklets/SERP-extraction_Preview.gif" class="img-fluid" alt="Daine Dvorak Custom Developed Bookmarklets Automating tedious task.">
-            <div class="portfolio-links">
-              <a href="https://dainedvorak.com/portfolio/4-bookmarklets/SERP-extraction_Preview.gif" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
