--- a/portfolio/seo-technical-audit-automated-workbook/index.html
+++ b/portfolio/seo-technical-audit-automated-workbook/index.html
@@ -87,19 +87,25 @@
            /*  background-image: url("https://dainedvorak.com/z_dev/public/assets/img/background-patterns/white-css-pattern-zig-zag-2.png"); */
             background-repeat: repeat;
          }
-         #skillITEM {
-         border: 1.5px solid green;
-         margin-bottom: 1%;
-         padding-top: 5px;
-         padding-bottom: 5px;
-         }
-         #checkmark {
-         fill: #17aa1c;
-         width: 2%;
-         height: auto;
-         padding-bottom: 2px;
-         margin-right: 10px;
-         }
+    #skillITEM {
+    border: 1.5px solid green;
+    margin-bottom: 1%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  .skillITEM {
+    border: 1.5px solid green;
+    margin-bottom: 1%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+    #checkmark {
+      fill: #17aa1c;
+      width: 2%;
+      height: auto;
+      padding-bottom: 2px;
+      margin-right: 10px;
+                        }
          .hoverable {
          transition: background-color 0.2s ease;
          align-items: center;
