2-12-2024 all content updates, and portfolio page development

--- a/portfolio/seo-technical-audit-automated-workbook/index.html
+++ b/portfolio/seo-technical-audit-automated-workbook/index.html
@@ -167,56 +167,58 @@
          <section id="breadcrumbs" class="breadcrumbs border-bottom shadow bg-dark text-white">
             <div class="container">
                <div class="d-flex justify-content-between align-items-center">
-                  <h1>{{showcase_page_title}}</h1>
+                  <h1>Scalable Automated SEO Technical Audit</h1>
                </div>
             </div>
          </section>
          <!-- End Breadcrumbs -->
-         <div class="col-lg">
-            <div class="container mt-5">
-               <div class="card shadow">
-                  <div class="card-header">
-                     <strong>Portfolio Item Details</strong>
-                  </div>
-                  <div class="card-body">
-                     <ul class="list-unstyled">
-                        <li class="mb-2 mt-0">
-                           <strong>Category</strong>:
-                           <ul>
-                              <li id="portfolio_category">{{portfolio_category}}</li>
-                           </ul>
-                        </li>
-                        <li>
-                           <strong>Key Skills Highlighted</strong>:
-                           <ul>
-                              <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
-                              <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                              <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
-                           </ul>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
-            </div>
-         </div>
+
          <!-- ======= Portfolio Details Section ======= -->
-         <section id="portfolio-details" class="portfolio-details">
+         <section id="portfolio-details" class="portfolio-details ">
             <div class="container">
                <div class="row gy-4">
-                  <div class="col-lg">
-                     <div class="portfolio-details-slider swiper">
+                  <div class="col-lg ">
+                     <div class="portfolio-details-slider swiper shadow border-radius">
                         <div class="swiper-wrapper align-items-center">
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_1}}" alt="{{showcase_image_1_altText}}" id="showcase_image_1">
+                              <img src="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/portfolio-image-1-scalable_tech_audit.png" alt="Screenshot of an automated SEO technical audit workbook interface, featuring a clean, structured layout with multiple tabs for different aspects of SEO analysis such as site health, page speed, and keyword optimization. The workbook is open on a summary page displaying charts, graphs, and tables that provide an overview of a website's SEO performance metrics. The design emphasizes efficiency and clarity, with color-coded sections for easy navigation and interpretation of data." id="showcase_image_1">
                            </div>
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_2}}" alt="{{showcase_image_2_altText}}" id="showcase_image_2">
+                              <img src="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/portfolio-image-2-scalable_tech_audit.png" alt="An open spreadsheet titled 'SEO Technical Audit Analysis Workbook' with multiple columns and rows filled with technical SEO checklist items. The top banner has instructions to first answer questions in the 'INDEX' tab. The checklist includes columns for 'Issue Type,' 'Category,' 'Item to Review & Action Items,' 'Guide,' 'How-To Resource,' 'Recommended Tool,' 'Answer,' and 'Pass/Fail.' Each row contains a different SEO element to be audited, such as XML sitemap existence, robots.txt verification, and backlink quality. Many rows have a 'Click Here' link for resources, and checkboxes for answers. The workbook has tabs at the bottom for 'User Guides,' 'Summary,' 'INDEX,' 'Audit Outline,' among others, suggesting a comprehensive approach to SEO technical auditing" id="showcase_image_2">
                            </div>
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_3}}" alt="{{showcase_image_3_altText}}" id="showcase_image_3">
+                              <img src="https://dainedvorak.com/portfolio/seo-technical-audit-automated-workbook/portfolio-image-3-scalable_tech_audit.png" alt="Screenshot of an SEO Technical Audit Template section with a heading 'How to Use this SEO Technical Audit Template?'. The sheet is divided into columns with key variation questions for manual data input, such as 'Today's Date', 'New or Existing Website?', 'Data Pull Range', and access details for various SEO tools like Google Search Console and Bing Webmaster Tools. An example URL 'https://www.domaindept.com' is displayed under 'Existing Website URL'. Each question has an adjacent '--ANSWER--' placeholder for input. A side note explains the scope level range 1-5 for detail depth, affecting the audit outline. The color-coded spreadsheet is part of a fully scalable technical audit designed for SEO professionals." id="showcase_image_3">
                            </div>
                         </div>
                         <div class="swiper-pagination"></div>
+                     </div>
+
+                     <div class="col-lg">
+                        <div class="container mt-5">
+                           <div class="card shadow">
+                              <div class="card-header">
+                                 <strong>Portfolio Item Details</strong>
+                              </div>
+                              <div class="card-body">
+                                 <ul class="list-unstyled">
+                                    <li class="mb-2 mt-0">
+                                       <strong>Category</strong>:
+                                       <ul>
+                                          <li id="portfolio_category">{{portfolio_category}}</li>
+                                       </ul>
+                                    </li>
+                                    <li>
+                                       <strong>Key Skills Highlighted</strong>:
+                                       <ul>
+                                          <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
+                                          <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
+                                          <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
+                                       </ul>
+                                    </li>
+                                 </ul>
+                              </div>
+                           </div>
+                        </div>
                      </div>
                      <div class="portfolio-description">
                         <h2 class="display-2" id="h2_showcase_header">Scalable, Automated, Custom Template for SEO Technical Audit</h2>
