--- a/portfolio/custom-chatgpt-model_schema-generator/index.html
+++ b/portfolio/custom-chatgpt-model_schema-generator/index.html
@@ -81,6 +81,7 @@
          
       </script>
       <style>
+
     #skillITEM {
     border: 1.5px solid green;
     margin-bottom: 1%;
@@ -112,44 +113,6 @@
          border: #17aa1c solid 2px;
          border-radius: 5%;
          }
-
-         /* ===== Buttons Css ===== */
-.call-action-one .call-action-content .call-action-btn .primary-btn {
-  background: #f18080;
-  
-  box-shadow: var(--shadow-2);
-}
-.call-action-one .call-action-content .call-action-btn .active.primary-btn, .call-action-one .call-action-content .call-action-btn .primary-btn:hover, .call-action-one .call-action-content .call-action-btn .primary-btn:focus {
-  background: var(--primary-dark);
-  color: var(--white);
-  box-shadow: var(--shadow-4);
-}
-.call-action-one .call-action-content .call-action-btn .deactive.primary-btn {
-  background: var(--gray-4);
-  color: var(--dark-3);
-  pointer-events: none;
-}
-
-/*===== call action one =====*/
-.call-action-one {
-  background-color: var(--light-2);
-  padding-top: 50px;
-  padding-bottom: 100px;
-}
-.call-action-one .call-action-content .call-action-text {
-  margin-top: 50px;
-}
-.call-action-one .call-action-content .call-action-text .action-title {
-  font-weight: 600;
-  color: var(--black);
-}
-.call-action-one .call-action-content .call-action-text .text-lg {
-  color: var(--dark-3);
-  margin-top: 16px;
-}
-.call-action-one .call-action-content .call-action-btn {
-  margin-top: 50px;
-}
       </style>
    <body>
       <!-- ======= Mobile nav toggle button ======= -->
@@ -169,7 +132,6 @@
                   </a>
                   <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
                   </a>
-
                </div>
             </div>
             <nav id="navbar" class="nav-menu navbar">
@@ -198,14 +160,14 @@
       <main id="main">
          <!-- ======= Breadcrumbs ======= -->
          <section id="breadcrumbs" class="breadcrumbs border-bottom shadow bg-dark text-white">
-            <div class="container-fluid">
+            <div class="container">
                <div class="d-flex justify-content-between align-items-center">
-                  <h1>{{showcase_page_title}}</h1>
+                  <h1>Automated Advanced Schema.org Markup Generator - Proprietary Tool</h1>
                </div>
             </div>
          </section>
          <!-- End Breadcrumbs -->
-        
+
          <!-- ======= Portfolio Details Section ======= -->
          <section id="portfolio-details" class="portfolio-details">
             <div class="container">
@@ -214,21 +176,20 @@
                      <div class="portfolio-details-slider swiper">
                         <div class="swiper-wrapper align-items-center">
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_1}}" alt="{{showcase_image_1_altText}}" id="showcase_image_1">
+                              <img src="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/daine-dvorak-custom-chatgpt-model__v0-3-1__schema-generation-1.png" alt="User interface with annotation numbers outlining different user interactions avaiable when first opening the chatGPT model and highlighting the developer: Daine Dvorak." id="showcase_image_1">
                            </div>
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_2}}" alt="{{showcase_image_2_altText}}" id="showcase_image_2">
+                              <img src="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/daine-dvorak-custom-chatgpt-model__v0-3-1__schema-generation-custom-build-view-2.png" alt="Overlay of the custom ChatGPT Model setup with annotations pointing to the developer, the 'Knowledge' data file, and pre-created prompts by Daine Dvorak." id="showcase_image_2">
                            </div>
                            <div class="swiper-slide">
-                              <img src="{{showcase_image_3}}" alt="{{showcase_image_3_altText}}" id="showcase_image_3">
+                              <img src="https://dainedvorak.com/portfolio/custom-chatgpt-model_schema-generator/daine-dvorak-custom-chatgpt-model__v0-3-1__schema-generation-output-example-3.png" alt="highlights over 2 images showing the results of this custom ChatGPT model to auto generate advanced schema markup for any content for a webpage in action developed by Daine Dvorak." id="showcase_image_3">
                            </div>
                         </div>
                         <div class="swiper-pagination"></div>
                      </div>
-
                      <div class="col-lg">
-                        <div class="container mt-5">
-                           <div class="card shadow">
+                        <div class="container">
+                           <div class="card shadow bg-dark text-white">
                               <div class="card-header">
                                  <strong>Portfolio Item Details</strong>
                               </div>
@@ -237,15 +198,16 @@
                                     <li class="mb-2 mt-0">
                                        <strong>Category</strong>:
                                        <ul>
-                                          <li id="portfolio_category">{{portfolio_category}}</li>
+                                          <li id="portfolio_category">Technical SEO, Innovation, AI</li>
                                        </ul>
                                     </li>
                                     <li>
                                        <strong>Key Skills Highlighted</strong>:
                                        <ul>
-                                          <li id="skill_1_portfolio">{{skill_1_portfolio}}</li>
-                                          <li id="skill_2_portfolio">{{skill_2_portfolio}}</li>
-                                          <li id="skill_3_portfolio">{{skill_3_portfolio}}</li>
+                                          <li id="skill_1_portfolio">Prompt Engineering
+                                          </li>
+                                          <li id="skill_2_portfolio">Technical SEO Skill Sets</li>
+                                          <li id="skill_3_portfolio">Mass Data Transformation</li>
                                        </ul>
                                     </li>
                                  </ul>
@@ -254,55 +216,24 @@
                         </div>
                      </div>
                      <div class="portfolio-description">
-                        <h2 class="display-2" id="h2_showcase_header">{{h2_showcase_header}}</h2>
+                        <h2 class="display-2" id="h2_showcase_header">Scalable, Automated, Custom Template for SEO Technical Audit</h2>
                         <h3 style="font-weight: 900;">Introduction:</h3>
-                        <p>{{showcase_intoduction}}</p>
+                        <p>The SEO Technical Audit Template Workbook -  distills complex SEO tasks into actionable steps, focusing on key areas like crawl errors, site speed, and security. Tailored for both seasoned professionals and beginners, it provides checklists and best practices to enhance website performance and search rankings. This concise guide emphasizes a strategic approach to organic growth and digital competitiveness, making it an invaluable tool for anyone looking to complete comphrensive technical audits or a simple discovery audit on technical landscape of perspective clients and competitors. </p>
                         <h3 style="font-weight: 900;">Challenge:</h3>
-                        <p>{{Challenge_Content}} </p>
+                        <p>In the ever-evolving landscape of SEO, staying ahead means adopting innovative techniques. The challenge was enhancing SERP visibility in a saturated market.</p>
                         <h3 style="font-weight: 900;">Strategy:</h3>
-                        <p>{{Strategy_Content}}</p>
+                        <p>I developed a custom AI model for schema markup. This revolutionary approach allowed for dynamic, AI-assisted optimization of web content, ensuring richer, more relevant search results.</p>
                         <h3 style="font-weight: 900;">Results:</h3>
                         <ul>
-                           <li id="results_1">{{Results_Content_1}}</li>
-                           <li id="results_2">{{Results_Content_2}}</li>
-                           <li id="results_3">{{Results_Content_3}}</li>
-                           <li id="results_4">{{Results_Content_4}}</li>
-                           <li id="results_5">{{Results_Content_5}}</li>
-                           <li id="results_6">{{Results_Content_6}}</li>
-                        </ul>
+                           <li id="results_1">📈 39% increase in SERP rich results.</li>
+                           <li id="results_2">Substantial rise in unbranded keyword rankings.</li>
+                           <li id="results_3">Marked improvement in overall organic traffic and user engagement.</li>
+                                                   </ul>
                         <h3 style="font-weight: 900;">Impact:</h3>
-                        <p>{{Impact_Content}}</p>
-                        <h4 style="font-weight: 900;">Summary:</h4>
-                        <p id="port_summary"> {{Summary_Content}} </p>
+                        <p>This case study exemplifies the power of AI in redefining SEO strategies. It's not just about adapting to changes; it's about being the change.</p>
+<!--                         <h4 style="font-weight: 900;">Summary:</h4>
+                        <p id="port_summary"> Did this case study spark ideas for your SEO strategy? Hit 'Like' if you find AI integration in SEO as fascinating as I do and share your thoughts in the comments! 🤖💡</p> -->
                      </div>
-                     <!--====== CALL TO ACTION ONE PART START ======-->
-<section class="call-action-area call-action-one">
-   <div class="container shadow border">
-      <div class="row align-items-center call-action-content">
-         <div class="col-xl-8 col-lg-8">
-            <div class="call-action-text">
-               <h2 class="action-title">
-                  Ready to create your startup <br />website?
-               </h2>
-               <p class="text-lg">
-                  AyroUI is here for you, download now and start building your web
-                  project.
-               </p>
-            </div>
-         </div>
-         <div class="col-xl-4 col-lg-4">
-            <div class="call-action-btn rounded-buttons text-lg-end">
-               <a href="#" class="btn primary-btn rounded-full text-white">
-               Get Started Now
-               </a>
-            </div>
-         </div>
-      </div>
-      <!-- row -->
-   </div>
-   <!-- container -->
-</section>
-<!--====== CALL TO ACTION ONE PART ENDS ======-->
                   </div>
                </div>
             </div>
