--- a/portfolio/driving-seo-success-and-team-growth/index.html
+++ b/portfolio/driving-seo-success-and-team-growth/index.html
@@ -81,6 +81,43 @@
          
       </script>
       <style>
+         /* ===== Buttons Css ===== */
+.call-action-one .call-action-content .call-action-btn .primary-btn {
+  background: var(--primary);
+  color: var(--white);
+  box-shadow: var(--shadow-2);
+}
+.call-action-one .call-action-content .call-action-btn .active.primary-btn, .call-action-one .call-action-content .call-action-btn .primary-btn:hover, .call-action-one .call-action-content .call-action-btn .primary-btn:focus {
+  background: var(--primary-dark);
+  color: var(--white);
+  box-shadow: var(--shadow-4);
+}
+.call-action-one .call-action-content .call-action-btn .deactive.primary-btn {
+  background: var(--gray-4);
+  color: var(--dark-3);
+  pointer-events: none;
+}
+
+/*===== call action one =====*/
+.call-action-one {
+  background-color: var(--light-2);
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+.call-action-one .call-action-content .call-action-text {
+  margin-top: 50px;
+}
+.call-action-one .call-action-content .call-action-text .action-title {
+  font-weight: 600;
+  color: var(--black);
+}
+.call-action-one .call-action-content .call-action-text .text-lg {
+  color: var(--dark-3);
+  margin-top: 16px;
+}
+.call-action-one .call-action-content .call-action-btn {
+  margin-top: 50px;
+}
     #skillITEM {
     border: 1.5px solid green;
     margin-bottom: 1%;
@@ -129,7 +166,7 @@
                   </a>
                   <a href="https://bit.ly/DDGitHub" class="github"><i class="bx bxl-github"></i>
                   </a>
-                  <a href="https://bit.ly/DD_JETTLIFE" class="youtube"><i class="bx bxl-youtube"></i>
+                  <a href="https://bit.ly/DD_JETTLIFE"  class="youtube"><i class="bx bxl-youtube"></i>
                   </a>
 
                </div>
@@ -208,6 +245,36 @@
 <h3>Conclusion</h3>
 
 <p>My management philosophy revolves around innovation, continuous improvement, and empowering teams to achieve their full potential. By embracing technology, fostering a culture of learning, and leading by example, I've been able to drive significant improvements in SEO performance, operational efficiency, and team development. This journey reflects my commitment to excellence in digital marketing and my dedication to leadership that inspires growth and success.</p>
+
+<!--====== CALL TO ACTION ONE PART START ======-->
+<section class="call-action-area call-action-one">
+   <div class="container">
+      <div class="row align-items-center call-action-content">
+         <div class="col-xl-8 col-lg-8">
+            <div class="call-action-text">
+               <h2 class="action-title">
+                  Ready to create your startup <br />website?
+               </h2>
+               <p class="text-lg">
+                  AyroUI is here for you, download now and start building your web
+                  project.
+               </p>
+            </div>
+         </div>
+         <div class="col-xl-4 col-lg-4">
+            <div class="call-action-btn rounded-buttons text-lg-end">
+               <a href="javascript:void(0)" class="btn primary-btn rounded-full">
+               Get Started Now
+               </a>
+            </div>
+         </div>
+      </div>
+      <!-- row -->
+   </div>
+   <!-- container -->
+</section>
+<!--====== CALL TO ACTION ONE PART ENDS ======-->
+
 
 <h4>Engage with Us</h4>
 
