--- a/z_dev/public/index.html
+++ b/z_dev/public/index.html
@@ -1157,126 +1157,30 @@
                         <ul id="portfolio-flters">
                           <li data-filter="*" class="filter-active">All</li>
                           <li data-filter=".filter-seo">SEO</li>
-                          <li data-filter=".filter-automation">Process Automation</li>
-                          <li data-filter=".filter-web">Web App Tools</li>
-                          <li data-filter=".filter-ai-innovator">Prompts Central</li>
+                          <li data-filter=".filter-automation">Automation</li>
+                          <li data-filter=".filter-leadership">Leadership</li>
+                          <li data-filter=".filter-innovate">Innovation</li>
+                          <li data-filter=".filter-dev">Development</li>
                         </ul>
                       </div>
                     </div>
 
                     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-automation">
                         <div class="portfolio-wrap">
                           <img src="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover_url-extraction-bookmarklet-one-of-two.png" class="img-fluid" alt="URL SERP Extraction">
                           <div class="portfolio-links">
                             <a href="https://dainedvorak.com/portfolio/bookmarklet-serp-extractor/cover-link-bookmarklet-url-extractor-from-search-results-webpage-developed-by-daine-dvorak-v2.gif" data-gallery="portfolioGallery"
                               class="portfolio-lightbox"
-                              title="Google Lighthouse Bulk Analysis - Lighthouse Web Appli"><i
+                              title="This GIF shows the user experience when using this tool"><i
                                 class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                           </div>
                         </div>
                       </div>
 
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-prompts">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Prompts Central"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                        </div>
-                      </div>
+                     
 
                     </div>
 
